# fastapi-items-api

./: README.md  pyproject.toml  requirements.txt
app/: __init__.py  db.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py
app/models/: __init__.py  item.py
app/schemas/: item.py
app/services/: item_service.py
tests/: test_health.py  test_items.py
